# krypto-alert

./: Cargo.toml  README.md  Settings.toml
data/: alerts.json
src/: error.rs  logger.rs  main.rs  settings.rs  types.rs  utils.rs
src/core/: alert.rs  api.rs  mod.rs  notification.rs  store.rs  symbol.rs  worker.rs
