[package]
name = "krypto-alert"
version = "0.1.0"
authors = ["NajeebTyson <najeebus777@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
snafu = "0.6.10"
reqwest = { version = "0.11.3", features = ["blocking", "json"] }
lazy_static = "1.4.0"
futures = "0.3.14"
log = "0.4.14"
env_logger = "0.8.3"
config = "0.11.0"
toml = "0.5.8"
uuid = { version = "0.7", features = ["serde", "v4"] }
notify-rust = "4"
rayon = "1.5.0"
